Fix JWT auth: add role authority to SecurityContext